welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:10: error: not found: value vubiscuit
return vubiscuit
       ^